--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -29,6 +29,7 @@
 #login-or-signup-button{
     height: 30px;
     width: fit-content;
+    min-width: 70px;
     font-size: 14px;
     color: white;
     font-weight: 600;
@@ -37,5 +38,26 @@
     border-radius: 3px;
     border-color: transparent;
     cursor: pointer;
+
+}
+
+#login-form-container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 20px;
+
+}
+#login-form{
+    background-color: black;
+    width: 40%;
+    min-height: 300px;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    padding-top: 30px;
 
 }
