--- a/client/src/styles/subscriptions.css
+++ b/client/src/styles/subscriptions.css
@@ -1,3 +1,11 @@
+
+
+#subscriptions-page-main-container{
+    padding-top: 8vh;
+}
+
+
+
 .subscribedTo-main-link-container{
     display: flex;
     flex-direction: row;
