--- a/client/src/styles/articleread.css
+++ b/client/src/styles/articleread.css
@@ -6,6 +6,7 @@
     background-color: #f9f9f9;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 15px;
 }
 
 #article-title {
@@ -38,4 +39,27 @@
     font-size: 1em;
     line-height: 1.6;
     color: #333;
+}
+#show-comments-button-container{
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    font-family: Arial, sans-serif;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#show-comments-button{
+    background-color: rgb(226, 7, 83);
+    border-style: solid;
+    border-color: rgb(226, 7, 83);
+    border-radius: 4px;
+    font-weight: 600;
+    color: white;
+    height: 30px;
+    
 }
