--- a/client/src/styles/articleshare.css
+++ b/client/src/styles/articleshare.css
@@ -15,10 +15,14 @@
         margin: 0 auto;
         padding: 20px;
         font-family: Arial, sans-serif;
-        background-color: #f9f9f9;
+        /* background-color: #f9f9f9; */
+        background-color: #0c101C;
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         margin-bottom: 15px;
+        color : #ffffff;
+        /* background-color: #101524; */
+        /* color : #F2DDCC; */
     }
     #share-buttons{
         display: flex;
