--- a/client/src/styles/advertisement.css
+++ b/client/src/styles/advertisement.css
@@ -1,15 +1,17 @@
 #advertisement-header{
     width: 100%;
-    background-color: #fCEEEA;
+    background-color: #0c101C;
     height: 12vh;
+    color: rgb(255, 255, 255);
     
     display: flex;
     flex-direction: row;
+    align-items: center;
     /* justify-content: space-around; */
 
     padding: 15px;
     border-bottom-style: solid;
-    border-bottom-width: 2px;
+    border-bottom-width: 3px;
     border-bottom-color:rgb(226, 85, 85);
 
 
@@ -35,6 +37,7 @@
     width: 80%;
     height: 30px;
     background-color: #EBFDE7 ;
+    /* background-color: #101524; */
     color: black;
     border: solid;
     border-color: rgb(102, 180, 102);
@@ -54,11 +57,12 @@
     overflow: scroll; /* Hide scrollbar for Chrome, Safari, and Opera */ 
     -ms-overflow-style: none; /* IE and Edge */ 
     scrollbar-width: none; /* Firefox */
-    background-color: #ececf0;
+    /* background-color: #ececf0; */
     padding-top:40px;
     padding-left:6.25%;
     padding-right: 6.25%;
     padding-bottom:80px;
+    background-color: #101524;
     
 
 }
@@ -67,6 +71,8 @@
 }
 #advertisement-creator-form-container{
     background-color: #ffffff;
+    background-color: aliceblue;
+    
     min-height: 100vh;
     border-radius: 10px;
     padding-left: 15px;
@@ -157,7 +163,9 @@
     border-color: #E20753;
 }
 #advertisement-preview-container{
-    background-color: #ececf0;
+    /* background-color: #ececf0; */
+    background-color: #101524;
+    /*  */
     width: 50%;
     padding-top:40px;
     padding-left:6.25%;
@@ -171,6 +179,8 @@
 }
 #advertisement-preview-sub-container{
     background-color: white;
+    background-color: aliceblue;
+    border-radius: 8px;
     padding-top: 20px;
     min-height: 50vh;
     width: 87.5vh;
@@ -192,6 +202,7 @@
 #advertisement-preview-ad-title-container{
     width: 100%;
     margin-bottom:15px ;
+    color: black;
 
 }
 #advertisement-preview-ad-image-container{
