--- a/client/src/styles/authortools.css
+++ b/client/src/styles/authortools.css
@@ -15,7 +15,7 @@
     width: 100%;
     padding-left: 20px;
     padding-right: 20px;
-    padding-top: 15px;
+    padding-top: 25px;
     padding-bottom: 15px;
     
 
@@ -39,11 +39,12 @@
     border-bottom-style: solid;
     resize: none;
     border-bottom-color: rgb(127, 88, 255);
-    border-bottom-width: 2px;
+    border-bottom-width: 4px;
     min-height: 10vh;
     /* height: fit-content; */
     font-size: 16px;
     letter-spacing: 0.4px;
+    background-color: aliceblue;
 
 }
 
@@ -66,9 +67,10 @@
 
     resize: none;
     border-bottom-color: rgb(127, 88, 255);
-    border-bottom-width: 2px;
+    border-bottom-width: 4px;
     font-size: 16px;
     min-height: 20vh;
+    background-color: aliceblue;
 }
           
        
@@ -104,7 +106,8 @@
     border-style: none;
     border-bottom-style: solid;
     border-bottom-color: rgb(127, 88, 255);
-    border-bottom-width: 2px;
+    border-bottom-width: 4px;
+    background-color: aliceblue;
     resize: none;
     font-size: 16px;
     min-height: 50vh;
