--- a/client/src/styles/category.css
+++ b/client/src/styles/category.css
@@ -1,3 +1,8 @@
+body{
+    background-color: #101524;
+    color: #ffffff;
+
+}
 #Category-Header-Main-Container{
     position: fixed;
     /* width: 82vw; */
@@ -11,7 +16,9 @@
     flex-direction: row;
     align-items: center;
     font-size: larger;
-    background-color: aliceblue;
+    /* background-color: rgb(255, 240, 240); */
+    background-color: #101524;
+    color: #F2DDCC;
     width: calc(82vw - 20px);
     border-left-style: solid ;
     border-left-width:  4px;
@@ -39,14 +46,17 @@
     flex-wrap: wrap;
     padding-right: 20px;
     justify-content: space-between;
+    background-color: #101524;
     
 }
 .individual-category-main-container{
     /* background-color: greenyellow; */
-    background-color: aliceblue;
+    /* background-color: aliceblue; */
     margin-top: 5px;
     margin-bottom: 5px;
     width: calc(50% - 20px);
+    background-color: #101524;
+    color : #F2DDCC;
 }
 .individual-category-header{
     display: flex;
@@ -85,7 +95,7 @@
     padding-left: 10px;
     padding-right: 10px;
     border-left-style: solid;
-    border-left-color: rgb(127, 88, 255) ;
+    border-left-color: #7f58ff ;
     border-left-width: 4px;
     display: -webkit-box;        /* Use WebKit's box model */
     -webkit-box-orient: vertical; /* Set the box orientation to vertical */
