--- a/client/src/styles/commentbox.css
+++ b/client/src/styles/commentbox.css
@@ -13,8 +13,10 @@
     padding-bottom: 30px;
     padding-left:20px ;
     padding-right: 20px;
-    background-color: #f9f9f9;
+    /* background-color: #f9f9f9; */
+    background-color: #0c101C;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    color : #ffffff;
     
 }
 #commentbox-comment-heading{
@@ -38,4 +40,6 @@
     font-size: 16px;
     min-height: 25vh;
     width: 100%;
+    background-color: #101524;
+    color : #F2DDCC;
 }
