--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -5,7 +5,13 @@
     flex-direction: row;
     align-items: center;
     /* background-color: rgb(186, 109, 109); */
-    background-color: aliceblue;
+    /* background-color: aliceblue; */
+    background-color: #0c101C;
+    color: white;
+    border-bottom-style: solid;
+    border-bottom-width: 3px;
+    border-bottom-color: rgb(88, 127, 255);
+    /* color: black; */
     
 }
 
@@ -18,6 +24,8 @@
     margin-left: 30px;
     font-size: 20px;
     width: 85%;
+    /* color: black; */
+    color: white;
 
 
 }
@@ -49,7 +57,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
+    margin-top: 20px;
+    margin-bottom: 30px;
     /* background-color: azure; */
 
 }
